# elcare-care-app

./: CONTRIBUTING-SCHEMA-CHANGES.md  CONTRIBUTING.md  ISSUE_068_NOTES.md  README.md  SECURITY.md  package-lock.json
.cargo/: audit.toml
.github/workflows/: ci.yml
contracts/collection_nft_erc1155/src/: lib.rs  test.rs
contracts/collection_nft_erc721/src/: lib.rs  test.rs
contracts/launchpad/: Cargo.toml
contracts/launchpad/src/: contract.rs  events.rs  storage.rs  test.rs  types.rs
contracts/lazy_mint_erc1155/src/: lib.rs  test.rs
contracts/lazy_mint_erc721/src/: lib.rs  test.rs
contracts/soroban-marketplace/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
docs/: INCIDENT_RUNBOOK.md  THREAT_MODEL.md
frontend/elcarehub-app/: .gitignore  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
indexer/: .env.example  Dockerfile  README.md  openapi.json  openapi.yaml  package.json  vitest.integration.config.mts
indexer/.github/: migration-safety.md
indexer/prisma/: schema.prisma  seed.ts
indexer/src/: backfill.ts  cli.ts  config.ts  db.ts  event-sync.ts  gap-repair.ts  generate-openapi.ts  index.ts  logger.ts  metrics.ts  parser.ts  poller.ts  reconciler.ts  retry.ts  sentry.ts  stall.ts  stats-scheduler.ts  stats.ts
indexer/src/__tests__/: api.test.ts  backfill-integration.test.ts  backfill-unit.test.ts  backfill.test.ts  (+30 more)
scripts/deploy/: README.md  deploy_contract.sh  deploy_launchpad.sh  fund_account.sh
(+161 files in other folders)
